--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&family=Playfair+Display:wght@900&display=swap"); /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -137,10 +138,102 @@ a {
   text-decoration: none;
 }
 
+.changeTheme {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.checkbox {
+  opacity: 0;
+  position: absolute;
+}
+
+.label {
+  background-color: #9E8C6C;
+  border-radius: 50px;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 5px;
+  position: relative;
+  height: 26px;
+  width: 50px;
+  transform: scale(1.5);
+}
+
+.label .ball {
+  background-color: #fff;
+  border-radius: 50%;
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  height: 22px;
+  width: 22px;
+  transform: translateX(0px);
+  transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+  transform: translateX(24px);
+}
+
+.fa-moon {
+  font-size: 18px;
+  color: #f1c40f;
+}
+
+.fa-sun {
+  font-size: 18px;
+  color: #f1c40f;
+}
+
 .header .header--bg {
   background-image: url("/assets/img/bgHeader.png");
   background-repeat: no-repeat;
   background-position: top center;
+}
+.header__toolbar {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 70px 0 0;
+}
+.header .contacts {
+  position: relative;
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 30px;
+       column-gap: 30px;
+  visibility: hidden;
+  opacity: 0;
+  transform: translateY(-120%);
+  transition: all 1s ease-in-out;
+}
+.header .contacts__close-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 0;
+  color: #9E8C6C;
+  cursor: pointer;
+  font-size: 20px;
+  background: transparent;
+  opacity: 0;
+  transition: opacity ease-in 0.5s;
+}
+.header .contacts .close_btn--opacity {
+  opacity: 1;
+}
+.header .contacts__close-btn:focus {
+  outline: none;
+}
+.header .contacts--position {
+  margin-left: 70px;
+}
+.header .visible {
+  visibility: visible;
+  opacity: 1;
+  transform: translateY(0);
 }
 .header__content {
   display: flex;
@@ -150,12 +243,12 @@ a {
   position: relative;
   max-width: 1110px;
   margin: 0 auto;
-  padding: 180px 0 209px;
+  padding: 125px 0 209px;
 }
 .header__content::before {
   content: "";
   position: absolute;
-  top: 421px;
+  top: 365px;
   left: 238px;
   width: 152px;
   height: 152px;
@@ -164,8 +257,7 @@ a {
 }
 .header__job {
   margin-bottom: 10px;
-  margin-bottom: 10px;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33;
@@ -205,16 +297,17 @@ a {
   display: flex;
   flex-direction: column;
   row-gap: 100px;
+  min-width: 350px;
 }
 .main__biografy {
   display: flex;
   flex-direction: column;
   row-gap: 66px;
+  min-width: 635px;
 }
 
 .skillset__title {
-  margin-bottom: 10px;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33;
@@ -223,8 +316,7 @@ a {
   color: #9E8C6C;
 }
 .awards__title {
-  margin-bottom: 10px;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33;
@@ -233,8 +325,7 @@ a {
   color: #9E8C6C;
 }
 .careerTraits__title {
-  margin-bottom: 10px;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33;
@@ -242,9 +333,17 @@ a {
   text-transform: uppercase;
   color: #9E8C6C;
 }
+.careerTraits__list {
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+}
+.careerTraits__item--bold {
+  font-weight: 700;
+}
+
 .recentWorks__title {
-  margin-bottom: 10px;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33;
@@ -252,14 +351,29 @@ a {
   text-transform: uppercase;
   color: #9E8C6C;
 }
+.recentWorks__link {
+  position: relative;
+  padding: 0 25px 0 0;
+  font-weight: 700;
+  color: #0699A6;
+}
+.recentWorks__link::after {
+  content: "→";
+  position: absolute;
+  right: 0;
+}
+
 .aboutMe__title {
-  margin-bottom: 20px;
-  font-family: "Playfair Display";
+  font-family: "Playfair Display", serif;
   font-weight: 900;
   font-size: 36px;
   line-height: 1.28;
   color: #000000;
 }
+.aboutMe__text {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 .indent {
   padding: 80px 0 0;
 }
@@ -274,16 +388,20 @@ a {
 }
 
 .experience__title {
-  margin-bottom: 20px;
-  font-family: "Playfair Display";
+  font-family: "Playfair Display", serif;
   font-weight: 900;
   font-size: 36px;
   line-height: 1.28;
   color: #000000;
 }
+.experience__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
 .experience__job {
-  margin-bottom: 10px;
-  font-family: "PT Sans Narrow";
+  font-family: "PT Sans Narrow", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33;
@@ -293,16 +411,21 @@ a {
   letter-spacing: 1px;
 }
 .education__title {
-  margin-bottom: 20px;
-  font-family: "Playfair Display";
+  font-family: "Playfair Display", serif;
   font-weight: 900;
   font-size: 36px;
   line-height: 1.28;
   color: #000000;
+  margin-bottom: 20px;
 }
-.education__university {
+.education__unit {
+  display: flex;
+  justify-content: space-between;
+  align-items: top;
   margin-bottom: 10px;
-  font-family: "PT Sans Narrow";
+}
+.education__name {
+  font-family: "PT Sans Narrow", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 1.33;
@@ -310,6 +433,9 @@ a {
   text-transform: uppercase;
   color: #9E8C6C;
   letter-spacing: 1px;
+}
+.education__university {
+  font-weight: 700;
 }
 .footer .footer--bg {
   background-image: url("/assets/img/bgFooter.png");
@@ -325,6 +451,79 @@ a {
   margin: 0 auto;
   max-width: 793px;
 }
+.footer__cta {
+  margin-bottom: 40px;
+  font-family: "Playfair Display";
+  font-weight: 900;
+  font-size: 66px;
+  line-height: 1.24;
+  text-align: center;
+  letter-spacing: -1.1px;
+  color: #000000;
+}
+.footer__email {
+  margin-bottom: 66px;
+  font-family: "Playfair Display";
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 1.28;
+  text-align: center;
+  color: #0699A6;
+}
+
+.socialList {
+  display: flex;
+  align-items: center;
+  -moz-column-gap: 46px;
+       column-gap: 46px;
+  max-height: 26px;
+}
+.socialList__link {
+  display: flex;
+}
+.socialList__img {
+  vertical-align: middle;
+}
+
+.dark {
+  color: #ffffff;
+}
+.dark .container {
+  background: #0e1b1d;
+}
+.dark .label {
+  background-color: #fff;
+}
+.dark .label .ball {
+  background-color: #000;
+}
+.dark .header .header--bg {
+  background-image: url("/assets/img/bgHeaderDark.png");
+  background-repeat: no-repeat;
+}
+.dark .header__name {
+  color: #ffffff;
+}
+.dark .main .aboutMe__title {
+  color: #ffffff;
+}
+.dark .main .aboutMe__text {
+  text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.dark .main .experience__title {
+  color: #ffffff;
+}
+.dark .main .education__title {
+  color: #ffffff;
+}
+.dark .footer .footer--bg {
+  background-image: url("/assets/img/bgFooterDark.png");
+  background-repeat: no-repeat;
+}
+.dark .footer__cta {
+  color: #ffffff;
+}
+
 * {
   box-sizing: border-box;
 }
@@ -333,6 +532,50 @@ html {
   font-size: 14px;
 }
 
+body {
+  font-family: "PT Sans Narrow", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.7;
+  color: #000000;
+}
+body .container {
+  transition: background 0.2s linear;
+}
+body__canvas {
+  position: relative;
+}
+body .body-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  font-size: 80px;
+  color: green;
+  transform: translate(0, -50%);
+  transition: opacity ease-in 1s;
+  opacity: 0;
+  -webkit-animation: blink 2000ms alternate 5s infinite;
+          animation: blink 2000ms alternate 5s infinite;
+}
+
+@-webkit-keyframes blink {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes blink {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
 .container {
   max-width: 1440px;
   margin: 0 auto;
