--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -26,7 +26,7 @@
     line-height: 1.24;
     text-align: center;
     letter-spacing: -1.1px;
-    color: $colotText;
+    color: $colorText;
   }
 
   &__email {
@@ -42,7 +42,19 @@
 
 .socialList {
 
+  display: flex;
+  align-items: center;
+  column-gap: 46px;
+
+  max-height: 26px;
+
   &__item {}
 
-  &__link {}
+  &__link {
+    display: flex;
+  }
+
+  &__img {
+    vertical-align: middle;
+  }
 }
