--- a/scss/_generalSetting.scss
+++ b/scss/_generalSetting.scss
@@ -25,10 +25,10 @@ body {
     top: 50%;
     left: 50%;
 
-    font-size: 80px;
+    font-size: 48px;
     color: green;
 
-    transform: translate(0, -50%);
+    transform: translate(-50%, -50%);
     transition: opacity ease-in 1s;
     opacity: 0;
     animation: blink 2000ms alternate 5s infinite;
