--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -44,6 +44,17 @@
   &__list {}
 
   &__item {}
+
+  &__link {
+    color: black;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-color: rgba(6, 153, 166, 0.45);
+
+    &:hover {
+      border-bottom-width: 0;
+    }
+  }
 }
 
 .careerTraits {
@@ -73,7 +84,51 @@
 
   &__list {}
 
-  &__item {}
+  &__item {
+    position: relative;
+
+    &:hover {
+      &::after {
+        content: '';
+        display: inline-block;
+        width: 200px;
+        height: 146px;
+        position: absolute;
+        bottom: 35px;
+        left: 0;
+        background-size: contain;
+        background-repeat: no-repeat;
+        box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
+        opacity: 1;
+      }
+    }
+
+    &:nth-child(1) {
+      &:hover {
+        &::after {
+          background-image: url('/assets/img/project_Plants.png');
+        }
+      }
+    }
+
+    &:nth-child(2) {
+      &:hover {
+        &::after {
+          background-image: url('/assets/img/project_Vilocity.png');
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+        }
+      }
+    }
+
+    &:nth-child(3) {
+      &:hover {
+        &::after {
+          background-image: url('/assets/img/project_Vilocity.png');
+          box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+        }
+      }
+    }
+  }
 
   &__link {
     position: relative;
@@ -90,6 +145,18 @@
     }
   }
 }
+
+.language {
+
+  &__title {
+    @include header3;
+  }
+
+  &__list {}
+
+  &__item {}
+}
+
 
 .aboutMe {
 
@@ -168,5 +235,34 @@
     font-weight: 700;
   }
 
-  &__date {}
+  &__date {
+    line-height: 1.33;
+  }
+}
+
+.code {
+
+  &__title {
+    @include header2;
+    margin-bottom: 20px;
+  }
+
+  &__text {}
+
+  &__content {}
+
+  summary {
+    margin: 20px 0;
+  }
+
+  &__btn {
+    color: black;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+    border-color: rgba(6, 153, 166, 0.45);
+
+    &:hover {
+      border-bottom-width: 0;
+    }
+  }
 }
