--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,7 +1,7 @@
 .header {
 
   .header--bg {
-    background-image: url('/assets/img/bgHeader.png');
+    background-image: url('../../assets/img/bgHeader.png');
     background-repeat: no-repeat;
     background-position: top center;
   }
