refactor: change path to img

--- a/scss/_darkTheme.scss
+++ b/scss/_darkTheme.scss
@@ -20,7 +20,7 @@
   .header {
 
     .header--bg {
-      background-image: url('/assets/img/bgHeaderDark.png');
+      background-image: url('../../assets/img/bgHeaderDark.png');
       background-repeat: no-repeat;
     }
 
@@ -68,7 +68,7 @@
   .footer {
 
     .footer--bg {
-      background-image: url('/assets/img/bgFooterDark.png');
+      background-image: url('../../assets/img/bgFooterDark.png');
       background-repeat: no-repeat;
     }
 
