--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -81,7 +81,7 @@
       left: 238px;
       width: 152px;
       height: 152px;
-      background-image: url('/assets/greeting.svg');
+      background-image: url('../../assets/greeting.svg');
       background-repeat: no-repeat;
     }
   }
