--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  width: 100%;
 
   .footer--bg {
     background-image: url('../../assets/img/bgFooter.png');
@@ -22,21 +23,29 @@
     margin-bottom: 40px;
     font-family: 'Playfair Display';
     font-weight: 900;
-    font-size: 66px;
+    font-size: 412%;
     line-height: 1.24;
     text-align: center;
     letter-spacing: -1.1px;
     color: $colorText;
+
+    @media (max-width:950px) {
+      font-size: 312%;
+    }
   }
 
   &__email {
     margin-bottom: 66px;
     font-family: 'Playfair Display';
     font-weight: 900;
-    font-size: 36px;
+    font-size: 225%;
     line-height: 1.28;
     text-align: center;
     color: $colorPrimary;
+
+    @media (max-width:950px) {
+      font-size: 180%;
+    }
   }
 
   &__socialList {
