--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -2,7 +2,7 @@
   font-family: 'PT Sans Narrow', sans-serif;
   font-style: normal;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 100%;
   line-height: 1.7;
   color: $colorText;
 }
@@ -10,7 +10,7 @@
 @mixin header3 {
   font-family: 'PT Sans Narrow', sans-serif;
   font-weight: 700;
-  font-size: 18px;
+  font-size: 110%;
   line-height: 1.33;
   letter-spacing: 2px;
   text-transform: uppercase;
@@ -20,7 +20,7 @@
 @mixin header2 {
   font-family: 'Playfair Display', serif;
   font-weight: 900;
-  font-size: 36px;
+  font-size: 180%;
   line-height: 1.28;
   color: $colorText;
 }
